2000-10-24  Braden McDaniel  <braden@endoframe.com>

        * Unified typedef for Win32 and non-Win32 for TessCB in
          ViewerOpenGL.cpp.
        
        * Removed gcc-specific compiler flags from JavaScript's Makefile.am.

2000-10-15  Braden McDaniel  <braden@endoframe.com>

        * Took out the #ifdef around including <string.h> in System.cpp. It
          should be safe to include this everywhere, and now gcc wants it there
          on Linux.

2000-09-21  Chris Morley  <cmorley@vermontel.net>

	* Applied (the gist of) patches submitted by Bose, tflynn, and
	Jean-Daniel Fekete for VrmlNamespace invalid memory access,
	mpeg playback speed fix, and Cygwin support, respectively.

2000-09-09  Christopher St. John <cstjohn@acm.org>

	* vrml97parser.g fixed the intValue production. It was not
	correctly parsing hex values starting with "0x". Generally not a
	good idea to use iostreams as a lexer, its too error prone. Also
	fixed the sfImageValue production, it was not correctly unpacking
	longs into the byte array that a pixel texture expects. 

	* VrmlField.cpp fixed VrmlSFImage constructors to take the "num
	components" specification into account when computing the length
	of the image byte array, to go with the parser fix above. Taken
	together, these changes appear to fix bug # 109949.

	* VrmlSFImage.h added javadoc style comments detailing the way
	nComponents interacts with how the image byte array is
	interpreted.

	* VrmlNodePixelTexture.cpp commented out some debug messages.

2000-09-05  Christopher St. John <cstjohn@acm.org>

	* gifread.cpp, jpgread.cpp, mpgread.cpp, pngread.cpp Modified to
	load textures using OpenGL convention of origin in lower left hand
	corner instead of upper left. Old image loader code used regular
	convention and then munged the texture coordinates to turn them
	back right side up, which led to non-conformant behavior when
	scaling using a texture transform node. (see bug# 109952) The